--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,11 @@ target_link_libraries(benchmark-example benchmark)
 add_executable(bench bench.cpp)
 target_link_libraries(bench benchmark)
 
-
-add_executable(test-test01 test-test01.cpp)
-target_include_directories(test-test01 PRIVATE "${PROJECT_SOURCE_DIR}/testU01/include")
-target_link_libraries(test-test01  PRIVATE libtestU01.a libprobdist.a libmylib.a)
+### Fin du TP
+#add_executable(test-test01 test-test01.cpp)
+#target_include_directories(test-test01 PRIVATE "${PROJECT_SOURCE_DIR}/testU01/local/include")
+#target_link_directories(test-test01 PRIVATE "${PROJECT_SOURCE_DIR}/testU01/local/lib")
+#target_link_libraries(test-test01  PRIVATE libtestU01.a libprobdist.a libmylib.a)
 
 
 add_executable(test-timer test-timer.cpp)
