--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(BenchSampling)
 cmake_minimum_required(VERSION 3.14)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
@@ -27,3 +27,6 @@ target_link_libraries(benchGenerator benchmark)
 add_executable(test-timer test-timer.cpp)
 
 add_executable(whitenoise whitenoise.cpp)
+
+
+add_executable(gbn gbn.cpp)
